--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,15 @@
-/* Changer la couleur de fond */
+/* Rendre tout le texte rouge */
 body {
-  background-color: #f0f8ff;
+  color: red;
   font-family: Arial, sans-serif;
 }
 
-/* Personnaliser les titres */
+/* Personnaliser les titres (les rendre plus foncés) */
 h1, h2, h3 {
-  color: #333333;
+  color: darkred;
 }
 
-/* Personnaliser les liens */
+/* Personnaliser les liens (les rendre un peu plus clairs) */
 a {
-  color: #ff6347;
+  color: lightcoral;
 }
