--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,3 @@
-/* Rendre tout le texte rouge */
 body {
-  color: red;
-  font-family: Arial, sans-serif;
-}
-
-/* Personnaliser les titres (les rendre plus foncés) */
-h1, h2, h3 {
-  color: darkred;
-}
-
-/* Personnaliser les liens (les rendre un peu plus clairs) */
-a {
-  color: lightcoral;
+  background-color: red;  /* Test pour voir si le CSS est bien pris en compte */
 }
